--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@
     align-items: center;
     background-color: var(--main-color);
     color: white;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 0;
+    bottom: 0;
+
 }
 
 
