--- a/style.css
+++ b/style.css
@@ -17,26 +17,27 @@
     left: 0;
     top: 0;
     bottom: 0;
-
 }
-
 
 ul {
     list-style: none;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 0;
+
 }
 
 li {
     display: flex;
-    margin-right: 3.5em;
     margin-top: 1em;
     font-size: large;
     align-items: center;
 }
 
-
+.list-item-text {
+    overflow-wrap: break-word;
+}
 
 .btn {
     background-color: var(--input-color);
